# RecSys

./: .gitignore  README.md  note.txt  requirements.txt
modal_setup/: setup.py
recsys-fastapi/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
recsys-fastapi/alembic/: env.py
recsys-fastapi/app/: main.py
recsys-fastapi/app/api/: __init__.py  businesses.py  logs.py  recommendations.py  social.py  users.py
recsys-fastapi/app/core/: __init__.py  config.py
recsys-fastapi/app/db/: __init__.py  crud.py  models.py  session.py
recsys-fastapi/app/schemas/: businesses.py  logs.py  photos.py  social.py  users.py
recsys-fastapi/app/services/: artefacts.py  inference_runtime.py  logger.py  recommender.py
recsys-fastapi/app/utils/: scheduler.py
recsys-fastapi/docs/: FE_API_GUIDE.md  RECOMMENDATION_PIPELINE.md
recsys-fastapi/scripts/: import_yelp_photos.py  import_yelp_sample.py  seed_db.py
recsys-fastapi/tests/: conftest.py  test_businesses.py  test_edges_txt_fixture.py  test_logs.py  test_photos.py  test_recommendations_debug.py  test_users.py
srcs/: RecSysProject.ipynb
srcs/checks/: check_business_edges.py  check_embedding.py
srcs/graph/: build_graph_0embedd.py  build_similar_edges2.py  build_user_busines_edges.py  build_user_user_edges.py  embedding_business.py  embedding_graph.py  embedding_users.py  train_graph.ipynb
srcs/inference/: build_faiss_index.py  export_embeddings.py  inference.py  inference_social.py
yelp-recsys-fe/: README.md  package-lock.json  package.json
yelp-recsys-fe/src/: App.js  (+2 more)
(+21 files in other folders)
